# Human-Pose-detection

./: CMakeLists.txt  ReadMe.txt
include/: Pitcher_detect.h
src/: Pitch_detect.cpp  Pitching_detect_app.cpp
